[gd_scene load_steps=3 format=3 uid="uid://dctsmnvsxfbsa"]

[ext_resource type="Script" path="res://Scripts/Options.gd" id="1_eljbr"]
[ext_resource type="AudioStream" uid="uid://cgcr7o4tmfnfk" path="res://Assets/SFX/ButtonClicked.wav" id="2_pf48s"]

[node name="Options" type="Node2D"]
script = ExtResource("1_eljbr")

[node name="OptionsUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1161.0
offset_bottom = 651.0

[node name="Volume" type="Label" parent="OptionsUI"]
layout_mode = 0
offset_left = 200.0
offset_top = 119.0
offset_right = 402.0
offset_bottom = 163.0
theme_override_font_sizes/font_size = 30
text = "Volume:
"

[node name="OptionsTitle" type="Label" parent="OptionsUI"]
layout_mode = 0
offset_left = 475.0
offset_top = 10.0
offset_right = 699.0
offset_bottom = 68.0
theme_override_font_sizes/font_size = 40
text = "Options"

[node name="BackButton" type="Button" parent="OptionsUI"]
layout_mode = 0
offset_top = 591.0
offset_right = 182.0
offset_bottom = 645.0
theme_override_font_sizes/font_size = 20
text = "Back to Main Menu"

[node name="Aspect Ratio" type="Label" parent="OptionsUI"]
layout_mode = 0
offset_left = 201.0
offset_top = 195.0
offset_right = 436.0
offset_bottom = 235.0
theme_override_font_sizes/font_size = 30
text = "Aspect Ratio:
"

[node name="CreditsButton" type="Button" parent="OptionsUI"]
layout_mode = 0
offset_left = 914.0
offset_top = 594.0
offset_right = 1151.0
offset_bottom = 643.0
theme_override_font_sizes/font_size = 25
text = "Credits"

[node name="OptionsSFX" type="Node2D" parent="."]

[node name="ClickSFX" type="AudioStreamPlayer2D" parent="OptionsSFX"]
stream = ExtResource("2_pf48s")
pitch_scale = 2.25

[connection signal="pressed" from="OptionsUI/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="OptionsUI/CreditsButton" to="." method="_on_credits_button_pressed"]
